@@ -1,3 +1,7 @@
+Wed May 16 13:32:18 GMT 2012  Olly Betts <olly@survex.com>
+
+	* include/xapian/letor.h: Fix typos.
+
 Wed May 16 13:28:58 GMT 2012  Olly Betts <olly@survex.com>
 
 	* include/xapian/letor.h,letor.cc,letor_internal.cc,letor_internal.h:
